# Project-Architect

./: CMakeLists.txt  LICENSE  README.md  test_inputs.txt
docs/: JSON_CONTRACT.md
src/: main.cpp
src/core/: AgentContext.hpp  CognitiveLoop.cpp  CognitiveLoop.hpp
src/seraph/: ExecutionDiagnostics.cpp  ExecutionDiagnostics.hpp  ExecutorStub.cpp  ExecutorStub.hpp  FileAuditSink.cpp  FileAuditSink.hpp  IAuditSink.hpp  IExecutor.hpp  InvocationTypes.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  SeraphGuestAbi.hpp  WasmExecutor.cpp  WasmExecutor.hpp
src/warden/: CognitiveFrame.hpp  GrammarConstraints.cpp  GrammarConstraints.hpp  IBrainBackend.hpp  LlamaCppBackend.cpp  LlamaCppBackend.hpp  MockBrainBackend.cpp  MockBrainBackend.hpp  PromptAssembler.cpp  PromptAssembler.hpp  WardenEngine.cpp  WardenEngine.hpp
tests/: test_cognitive_frame.cpp  test_executor.cpp  test_frame_metadata.cpp  test_llama_backend_smoke.cpp  test_module_registry.cpp  test_operational_harness.cpp  test_prompt_assembler.cpp  test_real_backend_intents.cpp  test_seraph_contracts.cpp  test_warden.cpp  test_wasm_executor.cpp  test_wasm_executor_failures.cpp
tests/fixtures/: bad.wat  echo.wat  input_oob.wat  invalid_ptr.wat  manifest.json  missing_alloc.wat  trap.wat
